    option instead of creating a root.crt symlink in the data directory.
    (Related to the fix for #680162 below.)
  * pg_createcluster: If /etc/postgresql-common/root.crl is present, symlink
    it (<= 9.1), or set ssl_crl_file (>= 9.2).
  * pg_lsclusters: Make output column widths dynamically adjust to contents;
    shorten "Version" in header to "Ver".

  [ Martin Pitt ]
  * debian/backport-ppa: Stop building raring packages. The PPA is declared
    deprecated now, moving to apt.postgresql.org.
  * pg_createcluster: Drop "Moving configuration file.." message as it's not
    all that interesting and we are going to add more status output.
  * pg_createcluster: Print configuration and data directory on separate
    lines, and also show the current locale that the cluster will use.
    (Closes: #700271)
  * pg_updatedicts: Cleanup tsearch data files which do not have a
    corresponding hunspell or myspell dictionary installed any more.
    (Closes: #689996)

 -- Christoph Berg <myon@debian.org>  Fri, 01 Feb 2013 10:51:05 +0100

postgresql-common (140) experimental; urgency=low

  [ Martin Pitt ]
  * t/001_packages.t: Also check that -contrib is installed.
  * debian/backport-ppa: Backport -common for Ubuntu 12.10.
  * PgCommon.pm: Recognize "include_if_exists" directive. (LP: #1098986)
  * pg_ctlcluster: Recreate a missing /var/log/postgresql/ if needed.
    (LP: #1009989)
  * debian/postgresql-client-common.links: Wrap pgbench with pg_wrapper.
    (LP: #1068194)

  [ Christoph Berg ]
  * testsuite: The default list of umasks to test (022 077) can be overridden
    by setting the environment variable PG_UMASKS.
  * t/003_package_checks.t: Ensure psql is linked against libedit.
  * t/005_PgCommon.t: Increase sleep time after netcat launch to 200ms.
  * t/020_create_sql_remove.t: Test process title update.
  * pg_createcluster: Allow passing of initdb arguments on the command line.
    If --auth parameters are passed, skip updating the generated pg_hba.conf