@@ -8,6 +8,8 @@ postgresql-common (141) UNRELEASED; urgency=low
     it (<= 9.1), or set ssl_crl_file (>= 9.2).
   * pg_lsclusters: Make output column widths dynamically adjust to contents;
     shorten "Version" in header to "Ver".
+  * postgresql-client-common: For apt.postgresql.org builds (with "pgdg" in
+    the version number), depend on pgdg-keyring.
 
   [ Martin Pitt ]
   * debian/backport-ppa: Stop building raring packages. The PPA is declared
